--- a/deployment2.yaml
+++ b/deployment2.yaml
@@ -19,6 +19,15 @@ spec:
           image: andresvidal/rpi3-mongodb3
           ports:
             - containerPort: 27017
+      tolerations:
+        - key: 'node.kubernetes.io/unreachable'
+          operator: 'Exists'
+          effect: 'NoExecute'
+          tolerationSeconds: 10
+        - key: 'node.kubernetes.io/not-ready'
+          operator: 'Exists'
+          effect: 'NoExecute'
+          tolerationSeconds: 10	
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -41,6 +50,15 @@ spec:
           image: puunsn/mongo-service
           ports:
             - containerPort: 3001
+      tolerations:
+        - key: 'node.kubernetes.io/unreachable'
+          operator: 'Exists'
+          effect: 'NoExecute'
+          tolerationSeconds: 10
+        - key: 'node.kubernetes.io/not-ready'
+          operator: 'Exists'
+          effect: 'NoExecute'
+          tolerationSeconds: 10
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -60,9 +78,18 @@ spec:
     spec:
       containers:
         - name: todolist-service
-          image: puunsn/todo_management-service
+          image: puunsn/todolist:latest
           ports:
             - containerPort: 80
+      tolerations:
+        - key: 'node.kubernetes.io/unreachable'
+          operator: 'Exists'
+          effect: 'NoExecute'
+          tolerationSeconds: 10
+        - key: 'node.kubernetes.io/not-ready'
+          operator: 'Exists'
+          effect: 'NoExecute'
+          tolerationSeconds: 10
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -82,9 +109,18 @@ spec:
     spec:
       containers:
         - name: user-service
-          image: puunsn/user-service
+          image: puunsn/user-service:latest
           ports:
             - containerPort: 3002
+      tolerations:
+        - key: 'node.kubernetes.io/unreachable'
+          operator: 'Exists'
+          effect: 'NoExecute'
+          tolerationSeconds: 10
+        - key: 'node.kubernetes.io/not-ready'
+          operator: 'Exists'
+          effect: 'NoExecute'
+          tolerationSeconds: 10
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -104,9 +140,18 @@ spec:
     spec:
       containers:
         - name: management-service
-          image: puunsn/todo_management-service
+          image: puunsn/todo_management-service:latest
           ports:
             - containerPort: 3003
+      tolerations:
+        - key: 'node.kubernetes.io/unreachable'
+          operator: 'Exists'
+          effect: 'NoExecute'
+          tolerationSeconds: 10
+        - key: 'node.kubernetes.io/not-ready'
+          operator: 'Exists'
+          effect: 'NoExecute'
+          tolerationSeconds: 10
 ---
 apiVersion: v1
 kind: Service
