--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,7 @@
+events {
+	worker_connections 768;
+}
+
 stream {
         upstream db {
                 server 192.168.0.110:30005;
@@ -95,11 +99,11 @@ http {
         server {
                 listen 80;
 
-                location /todo/ {
+                location /mongo/ {
                         proxy_pass http://mongo-service/;
                 }
 
-                location /manage {
+                location /manage/ {
                         proxy_pass http://todo-management/;
                 }
                 
